development-main: finishing components v2

--- a/assets/styles/scss/abstracts/mixins/_components.scss
+++ b/assets/styles/scss/abstracts/mixins/_components.scss
@@ -3,8 +3,8 @@
 // -----------------------------------------------------------------------------
 
 // -  <---------------| Import Component Mixin Partials |--------------->
-@import 'components/c-box-border';
-@import 'components/c-button';
+// @import 'components/c-box-border';
+// @import 'components/c-button';
 @import 'components/c-card';
 @import 'components/c-icon';
 @import 'components/c-scrollbar';
