--- a/assets/styles/scss/abstracts/mixins/components/_c-card.scss
+++ b/assets/styles/scss/abstracts/mixins/components/_c-card.scss
@@ -3,7 +3,7 @@
 \* -------------------------------------------------------------------------- */
 
 // -  <<----------<< General >>---------->>
-.card {
+@mixin card {
   @include box-shadow(2);
   @include box-transition;
 
