--- a/assets/styles/scss/abstracts/mixins/components/_c-main-header.scss
+++ b/assets/styles/scss/abstracts/mixins/components/_c-main-header.scss
@@ -17,7 +17,7 @@
     justify-content: flex-end;
 
     &__item {
-      padding: $s-site-padding $s-site-padding;
+      // padding: $s-site-padding $s-site-padding;
       color: $light-bg;
       text-decoration: none;
     }
