--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -46,4 +46,4 @@
 +  PARTIAL SCSS GROUP 7 - `themes/`
 \* ========================================================================== */
 // @import 'themes/light';
-// @import 'themes/light--v2';
+@import 'themes/light--alt';
