--- a/assets/styles/scss/abstracts/variables/_variables--v2.scss
+++ b/assets/styles/scss/abstracts/variables/_variables--v2.scss
@@ -61,7 +61,7 @@ $font-size--base: 1rem; // 16px
 $font-family--h1: 'Montserrat', sans-serif;
 $font-family--h2: 'Montserrat', sans-serif;
 $font-family--h3: 'Montserrat', sans-serif;
-$font-family--h4: 'Roboto Slab', serif;
+$font-family--h4: 'Montserrat', sans-serif;
 $font-family--h5: 'Roboto Slab', serif;
 $font-family--h6: 'Roboto Slab', serif;
 $font-family--text-smaller: 'Poppins', sans-serif;
@@ -122,7 +122,7 @@ $font-variant--h5: normal;
 $font-variant--h6: small-caps;
 $font-variant--text-smaller: normal;
 $font-variant--text: normal;
-$font-variant--text-bigger: normal;
+$font-variant--text-bigger: small-caps;
 $font-variant--component-smaller: small-caps;
 $font-variant--component: small-caps;
 $font-variant--component-bigger: small-caps;
@@ -251,12 +251,6 @@ $filter--dark: brightness(0.8) contrast(1.2);
 $filter--dark-blur: brightness(0.8) contrast(1.2) blur($small-dimension--xxs);
 
 // -  <<----------<< Other-Colors >>---------->>
-
-// #  Wireframe
-html {
-  --wireframe--bg-color: hsla(0, 0%, 0%, 0.5);
-  --wireframe--wire: #f00;
-}
 
 // #  ...
 $color-white: hsl(0, 0%, 100%);
