--- a/assets/styles/scss/base/_b-sectioning.scss
+++ b/assets/styles/scss/base/_b-sectioning.scss
@@ -8,12 +8,12 @@
 
 // #  <---------------| <nav> |--------------->
 nav {
-  @include box-dimensions(s);
+  @include box-dimensions(xs);
 }
 
 // #  <---------------| <article> |--------------->
 article {
-  @include box-dimensions(s);
+  @include box-dimensions(xs);
 }
 
 // #  <---------------| <section> |--------------->
@@ -25,7 +25,7 @@ section {
 
 // #  <---------------| <aside> |--------------->
 aside {
-  @include box-dimensions(s);
+  @include box-dimensions(xs);
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -44,7 +44,7 @@ footer {
 
 // #  <---------------| <main> |--------------->
 main {
-  @include box-dimensions(s, $max-width: $max-width--root);
+  @include box-dimensions($max-width: $max-width--root);
 }
 
 /* -------------------------------------------------------------------------- *\
