--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -47,3 +47,4 @@
 \* ========================================================================== */
 // @import 'themes/light';
 @import 'themes/light--alt';
+@import 'abstracts/configs';
