--- a/assets/styles/scss/abstracts/variables/_variables--v2.scss
+++ b/assets/styles/scss/abstracts/variables/_variables--v2.scss
@@ -122,7 +122,7 @@ $font-variant--h5: normal;
 $font-variant--h6: small-caps;
 $font-variant--text-smaller: normal;
 $font-variant--text: normal;
-$font-variant--text-bigger: small-caps;
+$font-variant--text-bigger: normal;
 $font-variant--component-smaller: small-caps;
 $font-variant--component: small-caps;
 $font-variant--component-bigger: small-caps;
@@ -150,10 +150,10 @@ $line-height--h5: 1.25; // 125%
 $line-height--h6: 1.25; // 125%
 $line-height--text-smaller: 1.5; // 150%
 $line-height--text: 1.5; // 150%
-$line-height--text-bigger: 1.5; // 150%
+$line-height--text-bigger: 1.25; // 150%
 $line-height--component-smaller: 1.5; // 150%
 $line-height--component: 1.5; // 150%
-$line-height--component-bigger: 1.5; // 150%
+$line-height--component-bigger: 1.25; // 150%
 
 // -  <---------------| Text |--------------->
 
