--- a/assets/styles/scss/style-recourses.scss
+++ b/assets/styles/scss/style-recourses.scss
@@ -5,4 +5,4 @@
 @import 'abstracts/variables';
 @import 'abstracts/functions';
 @import 'abstracts/mixins';
-@import 'abstracts/configs';
+// @import 'abstracts/configs';
